# OcTree

./: .gitignore  CMakeLists.txt  README.md  a.out  display.cpp  filenames.sh  main.cpp  octree.h  paciente1_1.txt  paciente1_2.txt  paciente3_5.txt  paciente4_7.txt  paciente7_14.txt  paciente_1.txt  pointtest.cpp  pseudocodigo.cpp  run.sh  structs.h  test.txt  test1.txt
paths/: paciente1_1.txt  paciente2_3.txt  paciente2_4.txt  paciente3_6.txt  paciente7_15.txt
